tests/rosetta/out/C/benfords-law.error
cc: exit status 1
/tmp/benfords-law.c:80:8: warning: conflicting types for built-in function ‘floorf’; expected ‘float(float)’ [-Wbuiltin-declaration-mismatch]
   80 | double floorf(double x) { return (double)(((int)(x))); }
      |        ^~~~~~
/tmp/benfords-law.c:6:1: note: ‘floorf’ is declared in header ‘<math.h>’
    5 | #include <string.h>
  +++ |+#include <math.h>
    6 | 
/tmp/benfords-law.c: In function ‘show’:
/tmp/benfords-law.c:193:22: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  193 |     int line = tmp10 + padFloat3(obs, 9) + "  " + padFloat3(preds.data[i], 8);
      |                      ^ ~~~~~~~~~~~~~~~~~
      |                        |
      |                        char *
